- drakx-in-chroot:
  o enable to control strace behaviour

Version 17.26 - 3 April 2016

- add minimal CSD support (mga#17702)

Version 17.25 - 1 April 2016

- partionning:
  o fix detecting nvme devices as block devices
  o fix displaying partitions when there's only one disk
    (and the resulting crash: mga#18076)

Version 17.24 - 23 March 2016

- fix build on ia32
- add 'virtualbox' & 'vmware' flags for rpmsrate
- use systemd-detect-virt for detecting virtualization technology

Version 17.23 - 22 March 2016

- do not include twice webkit2gtk library
- remove swrast (too big just to fix a gtk+ warning...)

Version 17.21 - 21 March 2016

- load evdev (thus fixing a crash)
- load psmouse (it is now modular)
- use WebKit2 instead of WebKit1 for displaying help content (mga#15031)

Version 17.20 - 18 March 2016

- prevent slow boot on first boot (mga#16684)
- partionning:
  o fix partitions not initially displayed (mga#17564)

Version 17.19 - 24 February 2016

- detect nvme devices as block devices (mga#17743)
- detect partitions on nvme devices (mga#17743)

Version 17.18.1 - 10 February 2016

- bootloader:
  o add support for grub2-text too (mga#9431)
- partionning:
  o check ESP has the right fs type (mga#16246)
  o check that ESP mount point actually is an ESP

Version 17.17 - 29 January 2016

- fix hidden cursor (mga#17470)

Version 17.16 - 21 January 2016

- Add ARM support in perl-install
- options:
  o silent a warning bout BOOT_IMAGE option
- partionning:
  o fix crash (mga#17484)

Version 17.14 - 11 January 2016

- do not warn about kernel options when parsing drakx options
- include libinput udev helpers (mga#17470)

Version 17.13 - 9 January 2016

- regressions from 17.11:
  o fix ignoring options from isolinux
  o fix parsing stage1's automatic option (mga#17441)
- silent a perl-5.22 warning

Version 17.12 - 2 January 2016

- bootloader:
  o log found kernels (mga#16128)
  o skip swap in the list of partitions (mga#15767)
- partitioning: