@@ -1,3 +1,4 @@
+- just ignore kernel options
 - drakx-in-chroot:
   o enable to control strace behaviour
 
